...
        if self.isLastQuestion() {
            statisticService?.gamesQuizCount += 1
            statisticService?.questionsAllTheTime += questionsAmount

            let text = "Ваш результат: \(correctAnswers) из 10"
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            viewController?.show(quiz: viewModel)


        } else {
...
